<resources>
    <string name="app_name">Team8-2A_FinalProject</string>
    <string name="profile_name">Users Name</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_album">UserAlbum</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_other_profile">OtherProfile</string>
    <string name="profile_gender_View">Gender:</string>
    <string name="profile_gender_Edit">Gender PlaceHolder</string>
    <string name="profile_done">Back</string>
    <string name="profile_edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="title_activity_parse_application">ParseApplication</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Signup</string>
    <string name="login_title">Login</string>
    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="login_login_button">Login</string>
    <string name="login_signup_button">Signup</string>
    <string name="signup_firstName">First Name:</string>
    <string name="signup_lastName">Last Name:</string>
    <string name="signup_selectImg">Select Picture</string>
    <string name="signin_reenterPassword">Re-enter Password:</string>
    <string name="logout">Logout</string>
    <string name="profile_name_detailed">Name:</string>
    <string name="profile_name_editable">First Last Name</string>
    <string name="add_album">Add Album</string>
    <string name="title_activity_pictures">Pictures</string>
    <string name="add_picture">Add Picture</string>
    <string name="title_activity_other_albumn">OtherAlbumn</string>
    <string name="other_albumn">Others</string>
    <string name="your_albumn">Personal</string>
    <string name="title_activity_chat">Chat</string>
    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
</resources>
