<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.elijah.team8_2a_finalproject.UserAlbum">
    <item android:id="@+id/profile" android:title="@string/profile"
        android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/logout" android:title="@string/logout"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/yourAlbumn" android:title="@string/your_albumn"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/chat" android:title="@string/title_activity_chat"
        android:orderInCategory="100" app:showAsAction="always" />
</menu>