<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.elijah.team8_2a_finalproject.UserProfile">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profile_name"
        android:id="@+id/profile_name"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/profile_imageView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="250px"
        android:layout_height="250px"
        android:id="@+id/profile_imageView"
        android:layout_marginTop="27dp"
        android:src="@drawable/profile_img_placeholder"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profile_gender_View"
        android:id="@+id/profile_gender_View"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profile_gender_Edit"
        android:id="@+id/profile_gender_Edit"
        android:layout_alignBottom="@+id/profile_gender_View"
        android:layout_toEndOf="@+id/profile_gender_View"
        android:layout_marginStart="24dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_done"
        android:id="@+id/profile_done"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="63dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_edit"
        android:id="@+id/profile_edit"
        android:layout_alignTop="@+id/profile_done"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
