<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.elijah.team8_2a_finalproject.Login">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_username"
        android:id="@+id/login_username"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="90dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_password"
        android:id="@+id/login_password"
        android:layout_below="@+id/login_username"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_login_button"
        android:id="@+id/login_login_button"
        android:layout_below="@+id/login_password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="77dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_signup_button"
        android:id="@+id/login_button_signup"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/login_login_button"
        android:layout_alignParentStart="true" />

    <EditText
        android:ems="10"
        android:layout_height="wrap_content"
        android:id="@+id/login_username_edit"
        android:layout_width="wrap_content"
        android:layout_alignTop="@+id/login_username"
        android:layout_alignEnd="@+id/login_login_button"
        android:layout_marginEnd="19dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_password_edit"
        android:layout_alignTop="@+id/login_password"
        android:layout_alignStart="@+id/login_username_edit" />
</RelativeLayout>
